syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService{

rpc GetDiscount(GetDicountReuest) returns (CouponModel);
rpc UpdateDiscount(UpdateDiscountReuest) returns (CouponModel);
rpc CreateDiscount(CreateDicountRequest) returns (CouponModel);
rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDicountReuest{
	string productName = 1;
}

message CouponModel{
	int32 id = 1;
    string productName = 2;
    string description = 3;
    int32 amount = 4;
}

message CreateDicountRequest{
    CouponModel coupon = 1;
}

message UpdateDiscountReuest{
    CouponModel coupon = 1;
}
message DeleteDiscountRequest{
    string productName = 1;
}

message DeleteDiscountResponse{
    bool success = 1;
}